--- a/package.json
+++ b/package.json
@@ -12,8 +12,12 @@
     "axios": "^0.21.4"
   },
   "devDependencies": {
+    "@types/fancy-log": "^1.3.1",
+    "@types/gulp": "^4.0.9",
     "fancy-log": "^1.3.3",
-    "gulp": "^4.0.2"
+    "gulp": "^4.0.2",
+    "ts-node": "^10.4.0",
+    "typescript": "^4.4.4"
   },
   "engines": {
     "node": ">=10",
