--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "name": "Thyago Machado Cassimiro"
   },
   "scripts": {
-    "mb": "mb --allowInjection",
+    "mb": "mb start --allowInjection",
     "mock": "gulp createStubs"
   },
   "dependencies": {
@@ -19,7 +19,7 @@
     "gulp": "^4.0.2",
     "ts-node": "^10.4.0",
     "typescript": "^4.4.4",
-    "mountebank": "^2.5.0"
+    "mountebank": "2.4.0"
   },
   "engines": {
     "node": ">=10",
