--- a/package.json
+++ b/package.json
@@ -5,12 +5,18 @@
   "author": {
     "name": "Thyago Machado Cassimiro"
   },
+  "types": "dist/index.d.ts",
+  "files": [
+    "/dist"
+  ],
   "scripts": {
     "mb": "mb start --allowInjection",
     "mock": "gulp createStubs"
   },
   "dependencies": {
-    "axios": "^0.21.4"
+    "axios": "^0.21.4",
+    "global": "^4.4.0",
+    "mountebank": "2.4.0"
   },
   "devDependencies": {
     "@types/fancy-log": "^1.3.1",
@@ -18,8 +24,7 @@
     "fancy-log": "^1.3.3",
     "gulp": "^4.0.2",
     "ts-node": "^10.4.0",
-    "typescript": "^4.4.4",
-    "mountebank": "2.4.0"
+    "typescript": "^4.9.3"
   },
   "engines": {
     "node": ">=10",
