--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,9 @@
 {
   "compilerOptions": {
-    "target": "es6",
+    "target": "es2022",
+    "lib": [
+      "es2022"
+    ],
     "experimentalDecorators": true,
     "allowJs": true,
     "skipLibCheck": true,
@@ -9,14 +12,16 @@
     "strict": true,
     "forceConsistentCasingInFileNames": true,
     "noFallthroughCasesInSwitch": true,
+    "module": "commonjs",
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
+    "declaration": true,
+    "outDir": "./dist"
   },
-  "ts-node": {
-    "compilerOptions": {
-      "module": "commonjs"
-    }
-  }
+  "include": [
+    "src/index.ts",
+    "src/**/*"
+  ],
 }
