--- a/package.json
+++ b/package.json
@@ -1,28 +1,27 @@
 {
-  "name": "mock-server",
+  "name": "mock-server-api",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "author": {
     "name": "Thyago Machado Cassimiro"
   },
+  "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "files": [
     "/dist"
   ],
   "scripts": {
     "mb": "mb start --allowInjection",
-    "mock": "gulp createStubs"
+    "mock": "ts-node src/start.ts",
+    "mock:dist": "node dist/start.js",
+    "build": "tsc"
   },
   "dependencies": {
     "axios": "^0.21.4",
-    "global": "^4.4.0",
     "mountebank": "2.4.0"
   },
   "devDependencies": {
-    "@types/fancy-log": "^1.3.1",
-    "@types/gulp": "^4.0.9",
-    "fancy-log": "^1.3.3",
-    "gulp": "^4.0.2",
+    "@types/node": "^18.11.9",
     "ts-node": "^10.4.0",
     "typescript": "^4.9.3"
   },
