--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   "files": [
     "/dist"
   ],
+  "bin": {
+    "mock": "./bin/mock"
+  },
   "scripts": {
     "mb": "mb start --allowInjection",
     "mock": "ts-node src/start.ts",
@@ -18,13 +21,19 @@
     "build": "tsc"
   },
   "dependencies": {
-    "axios": "^0.21.4",
-    "mountebank": "2.4.0"
+    "axios": "^1.6.7"
   },
   "devDependencies": {
-    "@types/node": "^18.11.9",
+    "mountebank": "^2.9.1",
+    "nodemailer": "^6.9.9",
     "ts-node": "^10.4.0",
-    "typescript": "^4.9.3"
+    "typescript": "^4.3.4"
+  },
+  "overrides": {
+    "mountebank": {
+      "ejs": "^3.1.7"
+    },
+    "nodemailer": "$nodemailer"
   },
   "engines": {
     "node": ">=10",
