--- a/sample-project/package.json
+++ b/sample-project/package.json
@@ -13,8 +13,15 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
+    "mountebank": "^2.9.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
+  },
+  "overrides": {
+    "mountebank": {
+      "ejs": "^3.1.7" 
+    },
+    "nodemailer": "^6.9.9"
   },
   "dependencies": {
     "mock-server-api": "file:../mock-server"
