--- a/sample-project/package.json
+++ b/sample-project/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "build": "tsc",
     "mock": "mock",
-    "mb": "mb"
+    "mb": "mb --allowInjection"
   },
   "author": "",
   "license": "MIT",
@@ -25,6 +25,6 @@
     "nodemailer": "^6.9.9"
   },
   "dependencies": {
-    "mock-server-api": "^0.2.1"
+    "mock-server-api": "^0.2.2"
   }
 }
