--- a/sample-project/package.json
+++ b/sample-project/package.json
@@ -8,6 +8,7 @@
   ],
   "scripts": {
     "build": "tsc",
+    "premock": "tsc",
     "mock": "mock",
     "mb": "mb --allowInjection"
   },
@@ -25,6 +26,6 @@
     "nodemailer": "^6.9.9"
   },
   "dependencies": {
-    "mock-server-api": "^0.2.2"
+    "mock-server-api": "file:.."
   }
 }
