--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mock-server-api",
-  "version": "0.7.2",
+  "version": "0.8.0",
   "private": false,
   "author": {
     "name": "Thyago Machado Cassimiro",
@@ -34,13 +34,14 @@
     "mountebank": "^2.9.1",
     "nodemailer": "^6.9.9",
     "ts-node": "^10.4.0",
-    "typescript": "^4.3.4"
+    "typescript": "^4.3.4",
+    "jsonpath-plus": "10.3.0"
   },
   "overrides": {
     "mountebank": {
       "ejs": "^3.1.7",
       "express": "^4.19.0",
-      "jsonpath-plus": "10.2.0"
+      "jsonpath-plus": "10.3.0"
     },
     "nodemailer": "$nodemailer"
   },
