fix list-total query behavior

--- a/sample-project/src/stubs/projects/projectList.json
+++ b/sample-project/src/stubs/projects/projectList.json
@@ -3,7 +3,7 @@
   "list": [
     {
       "id": 1,
-      "name": "Test project",
+      "name": "Test project23",
       "status": "A",
       "created": 1601049132,
       "updated": 1606219199
@@ -17,21 +17,21 @@
     },
     {
       "id": 3,
-      "name": "Test project 3",
+      "name": "Test project 23",
       "status": "A",
       "created": 1601049132,
       "updated": 1606219199
     },
     {
       "id": 4,
-      "name": "Test project 4",
+      "name": "Test project 34",
       "status": "A",
       "created": 1601049132,
       "updated": 1606219199
     },
     {
       "id": 5,
-      "name": "Test project 5",
+      "name": "aaa Test project 5",
       "status": "A",
       "created": 1601049132,
       "updated": 1606219199
